# test-de-servier-HusseinB

./: .gitignore  Dockerfile  README.md  pyproject.toml  tmp_exploration.ipynb
app/: .env  main.py
app/output/: graph_link.json
app/src/: constants.py
app/src/adhoc/: json_processing.py
app/src/graph_linkage/: journal_mentions.py
app/src/pandas_processing/: clean.py  load.py  transform.py
app/tests/: test_clean.py  test_files_processing.py  test_journal_mentions.py  test_json_processing.py  test_transform.py
app/utils/: files_processing.py  my_logger.py
sql/: query_1_sales_by_day.sql  query_2_sales_by_product_type.sql
